# CuCTMC

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: ReactionNetwork.hpp  StochasticSimulation.cuh  cme.hpp  cuda.cuh
include/nlohmann/: json.hpp
models/: budding.json  budding_revised.json  budding_simplified.json  bursting.json
models/viral/: budding.json  budding_revis.json  budding_simpl.json  bursting.json
src/: ReactionNetwork.cpp  StochasticSimulation.cu  cme.cpp  cuda.cu  main.cpp
